style.css
:root{
   --cor-de-fundo: #FBEFF4;
   --cor-secundaria: #FBDADE;
   --cor-terciaria: #FFD6E7;
   --cor-quarter: #D62B81;
   --cor-de-link: #000;
   --cor-fonte-principal: #000;
   --cor-fonte-secundaria: #000;
   --font-main: 'Raleway', sans-serif;
}

.dark-mode:root {
    --cor-de-fundo: #29285F;
    --cor-secundaria: #3D3B8E;
    --cor-terciaria: #C4D7F2;
    --cor-quarter: #10a9f0;
    --cor-de-link: #FFF;
    --cor-fonte-principal: #C4D7F2;
    --cor-fonte-secundaria: #0F0E3E;
}


html {
    scroll-behavior: smooth;
}

body {
    box-sizing: border-box;
    background-color: var(--cor-de-fundo);
    color: var(--cor-fonte-principal);
    font-family: var(--font-main);
    margin: 0;
    padding: 0;
    line-height: 1;
    transition: background .3s;
}

ol, ul,li {
    list-style: none;
}

a {
    text-decoration: none;
    color: var(--cor-de-link);
}

section {
    padding: 0 9.5rem 0 9.5rem;
}

/*Sessão Menu*/

header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 0.625rem;
}

section.menu{
    display: flex;
    height: 5.5rem;
    justify-content: space-between;
    align-items: center;
}

/* Underline animação */
nav a {
    display: block;
    position: relative;
    padding: 0.2em 0;
}
  
  /* Fade in */
a::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 0.1em;
    background: var(--cor-quarter);
    opacity: 0;
    transition: opacity 300ms, transform 300ms;
}
  
a:hover::after,
a:focus::after {
    opacity: 1;
    transform: translate3d(0, 0.2em, 0);
}


.menu__list {
    display: flex;
    gap: 1.87rem;
}

/*Sessão Title*/


.title__div{
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    align-items: center;
    padding: 0.94rem 0 0.94rem 0;
}

.title__profile {
    border-radius: 50%;
}

.title__bio {
    font-family: Raleway;
    font-size: 3.25rem;
    font-weight: 700;
    line-height: 61.05px;
}

.title__subsection{
    font-size: 1.5rem;
}

.title__network{
    display: flex;
    gap: 50px;
    font-size: 20px;
}

/*Sessão About*/

section.about{ 
    background: var(--cor-secundaria);
    height: 383px;
    display: flex;
    align-items: center;
}

.about__container {
    width: 70%;
    font-size: 1.2rem;
}

/*Sessão Skills*/

section .skills {
    padding: 10px 0 10px 0;
}

.skills__name,
.hobbies__name {
    color: var(--cor-fonte-secundaria);
}

.skills__title, .hobbies__title {
    margin: 0;
    font-family: var(--font-main);
    font-size: 32px;
    font-weight: 700;
    text-align: center;
    padding: 15px 0 20px 0;
}

.skills__line, .hobbies__line {
    display: flex;
    justify-content: center;
    gap: 8px;
    padding: 0 0 20px 0;
}

.skills__box, .hobbies__box {
    display: flex;
    align-items: self-end;
    background: #FFFFFF;
    width: 11rem;
    height: 10.85rem;
}

.skills__box ul, .hobbies__box ul {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

/*Sessão Hobbies*/
section .hobbies {
    padding: 0 0 15px 0;
}

/* Experiência Acadêmica*/

section.academic{
    text-align: center;
    background: var(--cor-secundaria);
    padding-top: 0.625rem;
}

.academic__courses{
    display: flex;
    justify-content: center;
}

.academic__courses__box ul {
    display: flex;
    flex-direction: column;
    font-size: 1.2rem;
}

.academic__courses img {
    width: 80%;
}

/* experiência*/

section.experience{
    padding-bottom: 15px;
}

.experience__section__title {
    text-align: center;
}

.experiencie__box {
    display: flex;
    align-items: center;
}

.experiencie__box:nth-child(3) {
    flex-direction: row-reverse;
}

.experience__repo {
    padding: 0 10px 0 0;
}

.experiencia__botao--repo, .experiencia__botao--demo {
    font-family: var(--font-main);
    font-weight: 700;
    width: 96px;
    height: 40px;
    padding: 12px, 16px, 12px, 16px;
    gap: 10px;
    border-radius: 10px;
    border: none;
    cursor: pointer;
    box-shadow: 3px 2px 5px 3px rgba(0,0,0,0.1);
}

.experiencia__botao--repo {
    background: var(--cor-de-fundo);
    color: var(--cor-quarter);
}

.experiencia__botao--repo:hover {
    background: var(--cor-terciaria);
}

.experiencia__botao--demo {
    background: var(--cor-secundaria);
    color: var(--cor-quarter);
}

.experiencia__botao--demo:hover {
    background: var(--cor-terciaria);
}

/*Contato*/

section.formcontato {
    background: var(--cor-secundaria);
}

.formcontato span {
    display: none;
}

.formcontato__contato {
    display: flex;
    gap: 5px;
}

.formcontato__form {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.formcontato__form input, .formcontato__form textarea {
    background: var(--cor-de-fundo);
    outline: none;
    border-radius: 6px;
    border: 2px solid var(--cor-de-fundo);
    transition: .3s;
    font-family: var(--font-main);
}

.formcontato__form input {
    height: 30px;
}

.formcontato__form input:focus, .formcontato__form textarea:focus {
    border-color: var(--cor-quarter);
}

.formcontato__form ::placeholder {
    color: var(--cor-de-link);
}

.formcontato__form button {
    font-family: var(--font-main);
    font-weight: 700;
    height: 40px;
    padding: 12px, 16px, 12px, 16px;
    gap: 10px;
    border-radius: 10px;
    border: 2px solid var(--cor-quarter);
    background: var(--cor-de-fundo);
    color: var(--cor-de-link);
    cursor: pointer;
}

.formcontato__form button:hover {
    background: var(--cor-quarter);
    color: var(--cor-de-fundo);
    border: 2px solid var(--cor-terciaria);
} 


/*footeer*/

section.footer{
    text-align: center;
}


@media (max-width: 1250px) {

    *{
        padding: 0;
    }


    section {
        padding: 0 0.94rem 0;
    }

    /*Titulo*/


    .title__profile {
        width: 30%;
    }

    .title__bio {
        font-size: 2.25rem;
    }

    .title__network{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-around;
        align-items: center;
    }

    /*Sessão sobre*/

    .about__container {
        width: 100%;
    }

    /*Skills e Hobbies*/

    .skills__line, 
    .hobbies__line {
        flex-wrap: wrap;
    }

    .skills__box, 
    .hobbies__box {
        width: 6rem;
        height: 6rem;
        justify-content: center;
        align-items: center;
    }

    .skills__box ul, 
    .hobbies__line ul {
        padding: 0;
        flex-direction: column-reverse;
        text-align: center;
        gap: 5px;
    }

    
    /*Formação Acadêmica*/

    .academic__courses__item__img {
        width: 40%;
        align-self: center;
    }

    .academic__courses {
        flex-direction: column;
    }

    /*Experiência Profissional*/

    .experience__img {
        width: 40%;
    }

    .experiencie__box {
        flex-direction: column;
    }

    .experiencie__box:nth-child(3) {
        flex-direction: column;
    }

    .experience__info {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .experience__info {
        flex-direction: column;
        justify-content: center;
    }


    /*Contato*/

    .formcontato__contato {
        flex-direction: column;
        text-align: center;
    }

    .formcontato--esquerda img {
        width: 60%;
    }

    .formcontato__img { 
        width: 10%;
    }

    /*Footer*/

}

@media (max-width: 650px) {

    .about__container {
        font-size: 1rem;
    }

    .about__container img {
        width: 25%;
    }

    .menu__list__item {
        display: none;
    }

    .title__div {
        flex-direction: column;
    }

    .title__profile {
        width: 70%;
    }

    .title__container {
        width: 21rem;
    }

    .academic__courses__item__img {
        width: 100%;
        align-self: center;
    }

        /*Experiência Profissional*/

    .experiencie__box {
        flex-direction: column;
    }

    .experience__img {
        width: 90%;
    }

    .experiencie__box:nth-child(3) {
        flex-direction: column;
    }

    .experience__info {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

}

